Removed max width property and fixed center alignment, added padding to left and right sides to make content less W I D E

--- a/assets/style.css
+++ b/assets/style.css
@@ -26,8 +26,13 @@ li {
 
 body {
     margin-top: 40px;
-    max-width: 60%;
+    padding-left: 20%;
+    padding-right: 20%;
 }
+
+/* main {
+    padding: 10px;
+} */
 
 .align-center {
     justify-content: center;
@@ -36,5 +41,6 @@ body {
 
 .content-style {
     background-color: rgb(255, 0, 123);
-    padding: 10px;
+    padding: 20px;
+    border: 3px solid brown;
 }
